# storage/api-docs/api-docs.json
@@ -19,7 +19,7 @@
         }
     ],
     "paths": {
-        "/api/v1/projects": {
+        "/projects": {
             "get": {
                 "tags": [
                     "Projects"
@@ -85,7 +85,7 @@
                 }
             }
         },
-        "/api/v1/projects/{id}": {
+        "projects/{id}": {
             "get": {
                 "tags": [
                     "Projects"
@@ -105,7 +105,30 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/demo": {
+            "get": {
+                "tags": [
+                    "Testing Credentials"
+                ],
+                "summary": "Get name",
+                "operationId": "App\\Http\\Controllers\\Api\\V1\\Admin\\ProjectsApiController::demo",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Demos"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/projects/{id}": {
             "put": {
                 "tags": [
                     "Projects"
@@ -194,27 +217,6 @@
                     },
                     "404": {
                         "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/v1/demo": {
-            "get": {
-                "tags": [
-                    "Testing Credentials"
-                ],
-                "summary": "Get name",
-                "operationId": "App\\Http\\Controllers\\Api\\V1\\Admin\\ProjectsApiController::demo",
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Demos"
-                                }
-                            }
-                        }
                     }
                 }
             }
